// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> Icon renders correctly with icon prop 1`] = `
<Icon
  className="test"
  color="dark-gray"
  icon={[Function]}
  onClick={[Function]}
  size={20}
>
  <svgIcon
    className="icon icon-dark-gray icon-block test"
    height={20}
    onClick={[Function]}
    viewBox="0 0 36 36"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="icon icon-dark-gray icon-block test"
      height={20}
      onClick={[Function]}
      viewBox="0 0 36 36"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M28 10h-1V2a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2v8H2a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2v8a1 1 0 0 0 1 1v3a2 2 0 0 0 4 0v-3h16v3a2 2 0 0 0 4 0v-3a1 1 0 0 0 1-1v-8a2 2 0 0 0 2-2v-5a2 2 0 0 0-2-2zm-8-8h5v5h-5V2zm-9 0h8v5h-8V2zM5 2h5v5H5V2zm0 7h20v8H5V9zm-4 8v-5a1 1 0 0 1 1-1h1v7H2a1 1 0 0 1-1-1zm25 9H4v-8h22v8zm3-9a1 1 0 0 1-1 1h-1v-7h1a1 1 0 0 1 1 1v5z"
      />
      <path
        d="M10 21h10v1H10zm1 2h8v1h-8zm11.5-2a1.5 1.5 0 1 0 1.5 1.5 1.5 1.5 0 0 0-1.5-1.5zm0 2a.5.5 0 1 1 .5-.5.5.5 0 0 1-.5.5zm-15-2A1.5 1.5 0 1 0 9 22.5 1.5 1.5 0 0 0 7.5 21zm0 2a.5.5 0 1 1 .5-.5.5.5 0 0 1-.5.5z"
      />
    </svg>
  </svgIcon>
</Icon>
`;

exports[`<Icon /> Icon renders correctly with iconName prop 1`] = `
<Icon
  className="test"
  color="dark-gray"
  iconName="clock"
  onClick={[Function]}
  size={20}
>
  <clock
    className="icon icon-dark-gray icon-block test"
    height={20}
    onClick={[Function]}
    viewBox="0 0 36 36"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="icon icon-dark-gray icon-block test"
      height={20}
      onClick={[Function]}
      viewBox="0 0 36 36"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M28.921 18.026c0-.755-.604-1.367-1.35-1.367h-8.257V8.414a1.373 1.373 0 0 0-2.744 0v9.607c0 .758.615 1.372 1.372 1.372h9.63c.745 0 1.35-.612 1.35-1.367m4.12-.008c0 8.34-6.76 15.1-15.097 15.1-8.338 0-15.097-6.76-15.097-15.1s6.759-15.1 15.097-15.1 15.097 6.76 15.097 15.1m2.741 0c0-9.852-7.986-17.839-17.838-17.839S.106 8.165.106 18.017s7.987 17.839 17.839 17.839c9.852 0 17.838-7.987 17.838-17.839"
      />
    </svg>
  </clock>
</Icon>
`;

exports[`<Icon /> Icon renders correctly with image-cap 1`] = `
<Icon
  className="test"
  color="dark-blue"
  iconName="1122"
  onClick={[Function]}
  size={20}
>
  <imageCap
    className="icon icon-dark-blue icon-block test"
    height={20}
    onClick={[Function]}
    viewBox="0 0 36 36"
    width={20}
    xmlns="http://www.w3.org/2000/svg"
  >
    <svg
      className="icon icon-dark-blue icon-block test"
      height={20}
      onClick={[Function]}
      viewBox="0 0 36 36"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M25.763 24.085a14.645 14.645 0 0 0 3.22-9.017A14.492 14.492 0 1 0 14.492 29.56a13.735 13.735 0 0 0 9.017-3.22l9.178 9.177a1.554 1.554 0 0 0 2.254 0 1.554 1.554 0 0 0 0-2.254zm-11.271 2.254a11.271 11.271 0 1 1 11.27-11.271 11.199 11.199 0 0 1-11.27 11.271z"
      />
    </svg>
  </imageCap>
</Icon>
`;
